@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  21 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Ensure that CRITICAL_SERVICES are in the boot runlevel, #117912.
+
 * baselayout-1.12.0_pre15 (20 Jan 2006)
 
   20 Jan 2006; Roy Marples <uberlord@gentoo.org>:
